<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">betterU</string>	

    <string name="act_main_button_set">Set Wallpaper</string>
    <string name="act_main_button_reset">Reset Wallpaper</string>
    <string name="act_main_image_desc">Priming Image</string>
    <string name="act_main_txt_intro">Please do the following in order to receive full credit for the study:\n\n
•	Locate your four letter identity code in “My Profile” on the SONA website and enter it as your “Participant ID” in BetterU’s Settings.\n\n 
•	Select the “Initial Survey” from BetterU’s menu to sign the consent form and complete the first survey. You must consent in order to participate in the study.\n\n 
•	Select “Settings” from BetterU’s menu and enter your meal preferences and sleep schedule.\n\n
•	Complete the “Daily Survey” before going to sleep every day.\n\n
•	Complete both the "Daily Survey" and “Final Survey” at the end of the day on 11/24.\n 
        
    </string>
    
    <string name="menu_email">E-mail Log</string>
    <string name="menu_debug">Diagnostics Test</string>
    <string name="menu_log">View Log</string>
    <string name="menu_survey_daily">Daily Survey</string>
    <string name="menu_survey_initial">Initial Survey</string>
    <string name="menu_survey_final">Final Survey</string>
    <string name="menu_settings">Settings</string>

    <string name="pref_app_title">Application Settings</string>
    <string name="pref_app_reminder_title">Reminders</string>
    <string name="pref_app_reminder_desc">Receive automatic survey notifications</string>    
    <string name="pref_app_participant_title">Your Participant ID</string>
    <string name="pref_app_participant_summ">Set/View Participant ID</string>        
    
    <string name="pref_diet_title">Wellness Settings</string>        
    <string name="pref_diet_meal_title">Meal Preferences</string>
    <string name="pref_diet_meal_desc"></string><!-- Food Schedules and Preferences -->
    
    <string name="pref_diet_food_title">Food Preferences</string>
    <string name="pref_diet_food_desc">Select the foods you typically prefer to eat</string>
    <string name="pref_diet_schedule_meal">Meal Times</string>
    <string name="pref_diet_schedule_meal_desc">Select your typical meal times</string>
    <string name="pref_diet_schedule_snack">Snack Times</string>    
    <string name="pref_diet_schedule_snack_desc">Select your typical snack times</string>
   
    <string name="pref_bodyclock_title">Sleep Schedule</string>
    <string name="pref_bodyclock_desc"></string><!-- Wake and Sleep Patterns -->
    <string name="pref_bodyclock_wake_title">Wake-up Time</string>
    <string name="pref_bodyclock_wake_desc">Select the time you typically wake up</string>
    <string name="pref_bodyclock_wake_default">05</string>
    <string name="pref_bodyclock_sleep_title">Bed Time</string>
    <string name="pref_bodyclock_sleep_desc">Select the time you typically go to sleep</string>
    <string name="pref_bodyclock_sleep_default">23</string>
    
    <string name="reminder_survey_alert">Reminder: Submit your daily survey!</string>
    
    <string name="uri_survey_first">https://cornell.qualtrics.com/SE/?SID=SV_0PWVClSIAp0gkHH</string>    
    <string name="uri_survey_daily">https://cornell.qualtrics.com/SE/?SID=SV_4VeB3oDutkLITWd</string>
    <string name="uri_survey_final">https://cornell.qualtrics.com/SE/?SID=SV_3yEx2ukDt0bFyDz</string>
</resources>

