<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
	    	android:title="@string/pref_diet_title">
	    <PreferenceScreen
	        android:title="@string/pref_diet_meal_title"
	        android:summary="@string/pref_diet_meal_desc">
	        <PreferenceCategory
	    		android:title="@string/pref_diet_meal_title">
				<MultiSelectListPreference
			        android:dialogTitle="@string/pref_diet_food_title"
			        android:key="pref_food_list_key"
			        android:summary="@string/pref_diet_food_desc"
			        android:title="@string/pref_diet_food_title"
			        android:entries="@array/pref_food_typeEntries"
			        android:entryValues="@array/pref_food_typeValues"
			        android:defaultValue="@array/pref_food_defaultValues"
			        />	    
				<MultiSelectListPreference
			        android:dialogTitle="@string/pref_diet_schedule_meal"
			        android:key="pref_meal_list_key"
			        android:summary="@string/pref_diet_schedule_meal_desc"
			        android:title="@string/pref_diet_schedule_meal"
			        android:entries="@array/pref_meal_timeEntries"
			        android:entryValues="@array/pref_meal_timeValues"
			        android:defaultValue="@array/pref_meal_defaultValues"
			        />	    
				<MultiSelectListPreference
			        android:dialogTitle="@string/pref_diet_schedule_snack"
			        android:key="pref_snack_list_key"
			        android:summary="@string/pref_diet_schedule_snack_desc"
			        android:title="@string/pref_diet_schedule_snack"
			        android:entries="@array/pref_snack_timeEntries"
			        android:entryValues="@array/pref_snack_timeValues"
			        android:defaultValue="@array/pref_snack_defaultValues"
			        />
			</PreferenceCategory>
		</PreferenceScreen>
	    <PreferenceScreen
	        android:title="@string/pref_bodyclock_title"
	        android:summary="@string/pref_bodyclock_desc">
				<ListPreference
			        android:key="pref_bodyclock_wake_key"
			        android:summary="@string/pref_bodyclock_wake_desc"
			        android:title="@string/pref_bodyclock_wake_title"
			        android:entries="@array/pref_bodyclock_Entries"
			        android:entryValues="@array/pref_bodyclock_Values"
			        android:defaultValue="@string/pref_bodyclock_wake_default"
			        />	    
				<ListPreference
			        android:key="pref_bodyclock_sleep_key"
			        android:summary="@string/pref_bodyclock_sleep_desc"
			        android:title="@string/pref_bodyclock_sleep_title"
			        android:entries="@array/pref_bodyclock_Entries"
			        android:entryValues="@array/pref_bodyclock_Values"
			        android:defaultValue="@string/pref_bodyclock_sleep_default"
			        />
			</PreferenceScreen>
		</PreferenceCategory>
 	    <PreferenceCategory 
	        android:title="@string/pref_app_title">
		    <CheckBoxPreference
			    android:defaultValue="true"
			    android:key="pref_reminder_key"
			    android:title="@string/pref_app_reminder_title"
			    android:summary="@string/pref_app_reminder_desc"
			    /> 	        	    
	        <EditTextPreference
	            android:key="pref_participant_key"
	            android:title="@string/pref_app_participant_title"
	            android:summary="@string/pref_app_participant_summ"
	            android:dialogTitle="@string/pref_app_participant_title" 
	            />        
		</PreferenceCategory>		
</PreferenceScreen>
