<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.androidapp.MainActivity" >
    <item
        android:id="@+id/menu_survey_daily"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/menu_survey_daily"
        />
    <item
        android:id="@+id/menu_survey_initial"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/menu_survey_initial"
        />
    <item
        android:id="@+id/menu_survey_final"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/menu_survey_final"
        />
    
 	<item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never"/>
	<item
        android:id="@+id/menu_email"
        android:title="@string/menu_email"
        android:showAsAction="never"/>
	<!-- remove prior to production release -->
	<item
        android:id="@+id/menu_debug"
        android:title="@string/menu_debug"
        android:showAsAction="never"/>
</menu>
